이미지 너비 수정

--- a/styles/index.css
+++ b/styles/index.css
@@ -129,7 +129,9 @@ main .middle_bnr {
     margin-top:120px;
 }
 main .middle_bnr a {}
-main .middle_bnr a img {}
+main .middle_bnr a img {
+    width:100%;
+}
 main #trand {
     padding:120px 0;
     display:flex;
