--- a/styles/common.css
+++ b/styles/common.css
@@ -77,7 +77,7 @@ header .info {
 header .info li {}
 header .info li a {}
 header .info li a img {}
-header .info li .search_info {
+header .info .search_info {
     display:none;
 }
 /* main */
@@ -195,13 +195,11 @@ footer .bottom > p:last-child {
     margin-top:10px;
 }
 @media screen and (max-width:1240px) {
-    main {
-        padding:120px 30px;
-    }
+    main {}
     header nav {
         display:none;
     }
-    header .search_info {
+    header .info .search_info {
         display:block;
     }
     footer {
@@ -223,16 +221,10 @@ footer .bottom > p:last-child {
         padding:5px 15px;
     }
     header h1 a img {
-        width:103px;
+        width:120px;
     }
     .info {
         gap:20px;
-    }
-    .info li img {
-        width:18px;
-    }
-    main {
-        padding:80px 15px;
     }
     footer {
         padding:80px 15px;
