--- a/styles/index.css
+++ b/styles/index.css
@@ -19,12 +19,11 @@ main section h2 {
     font-size:2rem;
     font-weight:500;
     text-transform:uppercase;
-    text-wrap:nowrap;
     margin-bottom:50px;
 }
 main #new_arrival {
-    flex-flow:column nowrap;
     display:flex;
+    flex-flow:column nowrap;
     align-items:center;
     position:relative;
 }
@@ -62,19 +61,13 @@ main #new_arrival .new_list .cate_btn {
 main #new_arrival .new_list .cate_btn li {}
 main #new_arrival .new_list .cate_btn li a {}
 main #new_arrival .new_swiper {
-    width:100%;
+    width:1164px;
 }
-main #new_arrival .new_swiper .swiper-wrapper {
-    width:100%;
-    max-width:1164px;
-}
-main #new_arrival .new_swiper .swiper-wrapper .swiper-slide {
-    width:200px;
-    height:314px;
-}
+main #new_arrival .new_swiper .swiper-wrapper {}
+main #new_arrival .new_swiper .swiper-wrapper .swiper-slide {}
 main #new_arrival .new_swiper .swiper-wrapper .swiper-slide a {
     display:flex;
-    flex-flow:column;
+    flex-flow:column nowrap;
     gap:5px;
     align-items:center;
 }
@@ -200,6 +193,8 @@ main #trand h2 {
 }
 main #trand .trand_list {
     position:relative;
+    display:flex;
+    justify-content:center;
     margin:0 auto;
 }
 main #trand .trand_list .trand_swiper {
@@ -346,6 +341,44 @@ main #help .call .open_time p:nth-child(2) {
 main #help .call .open_time p:nth-child(3) {
     margin-bottom:15px ;
 }
+main .search_wrap {
+    position:fixed;
+    left:0; top:0;
+    background:rgba(0,0,0,0.4);
+    z-index:99;
+    width:100%;
+    height:100vh;
+    transition:all 0.3s;
+    opacity:0;
+}
+main .search_area_wrap {
+    width:100%;
+    position:fixed;
+    left:0; top:0;
+    z-index:100;
+    display:flex;
+    justify-content:center;
+}
+main #search_area {
+    position:absolute;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    top:50px;
+    width:800px;
+    background:#fff;
+    padding:10px 30px;
+    border-radius:80px;
+    transition:all 0.3s;
+    transform:translateY(-100px);
+}
+main #search_area input {
+    width:700px;
+}
+main #search_area .result_search {}
+main #search_area .result_search img {
+    filter:invert(100%);
+}
 /* 공통 카테고리 css */
 .cate_btn {
     display:flex;
@@ -424,7 +457,9 @@ a {cursor: pointer;}
     main #trand h2 {
         padding-left:15px;
     }
-    main #news .news_list ul li {}
+    main #news .news_list ul li {
+        width:100%;
+    }
     main #news .news_list ul li img {
         width:100%;
     }
@@ -439,5 +474,11 @@ a {cursor: pointer;}
     }
     .cate_btn {
         display:none;
+    }
+    main #search_area {
+        width:90%;
+    }
+    main #search_area input {
+        width:85%;
     }
 }
